21.9
-----
* [*] [internal] Refactored fetching posts in the Reader tab, including post related operations (i.e. like/unlike, save for latter, etc.) [#20197]
* [**] Reader: Add a button in the post menu to block an author and stop seeing their posts. [#20193]

21.8
-----
* [*] [WordPress-only] We have redesigned and simplified the landing screen. [#20061]
* [*] [internal] Refactored account related operations (i.e. log in and out of the app). [#19893]
* [*] [internal] Refactored comment related operations (i.e. like a comment, reply to a post or comment).
* [*] [internal] Refactored how reader topics are fetched from the database. [#20129]
* [*] [internal] Refactored blog related operations (i.e. loading blogs of the logged in account, updating blog settings). [#20047]
* [*] Reader: Add ability to block a followed site. [#20053]
* [*] Reader: Add ability to report a post's author. [#20064]
* [*] [internal] Refactored the topic related features in the Reader tab (i.e. following, unfollowing, and search). [#20150]

21.7
-----
* [*] [Jetpack-only] Fixed an issue where stats were not displaying latest data when the system date rolls over to the next day while the app is in background. [#19989]
* [*] [Jetpack-only] Hide Scan Login Code when logged into an account with 2FA. [#19567]
* [**] [Jetpack-only] Blogging Prompts: add the ability to answer previous prompts, disable prompts, and other minor enhancements. [#20055]

21.6
-----
* [*] Fix a layout issue impacting the "No media matching your search" empty state message of the Media Picker screen.  [#19820]
* [**] [internal] Refactor saving changes in the "Account Settings" page. [#19910]
* [*] The Migration flow doesn't complete automatically if the user interrupts the migration mid flow. [#19888]
* [**] [internal] Refactored fetching blog editor settings. [#19915]
* [*] [Jetpack-only] The Migration flow doesn't complete automatically if the user interrupts the migration mid flow. [#19888]